changed files from php to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 <meta name="keywords" content="web design portfolio site">
 </head>
 <body>
+  <img src="" alt="mobile menu" id="menu-mobile">
+  <img src="" alt="close" id="menu-mobile-close">
+
+  <nav>
+    <a href="web-design-and-dev/index.php"></a>
+    <a href="branding/index.php"></a>
+    <a href="photography/index.php"></a>
+    <a href="about/index.php"></a>
+    <a href="resume/index.php"></a>
+  </nav>
+
 <div>
   <h1>Karey Stivers</h1>
   <h2>I am a designer and front-end developer with a passion for solving real-world problems in efficient, effective, and creative ways</h2>
@@ -22,6 +33,14 @@
     <li><a href="photography/index.php">Photography</a></li>
   </ul>
 </div>
-<?php include '<footer.php';?>
+<footer>
+  <ul id="footer-contact">
+    <li>Karey Stivers</li>
+    <li>karey@kareystivers.dev</li>
+    <li><a href="tel:+2086996597">208-699-6597</a></li>
+    <li><a href="resume/index.php">Resume</a></li>
+  </ul>
+  <p>© Karey Stivers 2022</p> 
+</footer>
 </body>
 </html>
