--- a/web-design-and-dev/index.html
+++ b/web-design-and-dev/index.html
@@ -6,7 +6,16 @@
 <meta name="keywords" content="web design portfolio site">
 </head>
 <body>
-  <?php include '<../menu.php';?>
+<img src="" alt="mobile menu" id="menu-mobile">
+  <img src="" alt="close" id="menu-mobile-close">
+
+  <nav>
+    <a href="web-design-and-dev/index.php"></a>
+    <a href="branding/index.php"></a>
+    <a href="photography/index.php"></a>
+    <a href="about/index.php"></a>
+    <a href="resume/index.php"></a>
+  </nav>
 
   <div class="container">
     <div class="webdev-card">
@@ -47,6 +56,15 @@
 
   <a href="#">Back to top</a>
 
-  <?php include '<../footer.php';?>
+  <footer>
+  <ul id="footer-contact">
+    <li>Karey Stivers</li>
+    <li>karey@kareystivers.dev</li>
+    <li><a href="tel:+2086996597">208-699-6597</a></li>
+    <li><a href="resume/index.php">Resume</a></li>
+  </ul>
+  <p>© Karey Stivers 2022</p> 
+</footer>
+
 </body>
 </html>
