html content and structure edits

--- a/index.html
+++ b/index.html
@@ -2,45 +2,42 @@
 <html>
 <head>
 <title>Karey Stivers Portfolio Site</title>
-<meta name="Home page for Karey Stivers Portfolio Site" content="Home">
-<meta name="keywords" content="web design portfolio site">
+<meta charset="UTF-8">
+<html lang="en-US">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Karey Stivers"><meta name="keywords" content="web,design,portfolio,site">
+<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="css/styles.css">
+<script src="js/scripts.js" defer></script>
 </head>
 <body>
-  <img src="" alt="mobile menu" id="menu-mobile">
-  <img src="" alt="close" id="menu-mobile-close">
 
-  <nav>
-    <a href="web-design-and-dev/index.php"></a>
-    <a href="branding/index.php"></a>
-    <a href="photography/index.php"></a>
-    <a href="about/index.php"></a>
-    <a href="resume/index.php"></a>
-  </nav>
+  <div class="page-title">
+    <h1>Karey Stivers</h1>
+    <h2>I am a designer and front-end developer with a passion for solving real-world problems in efficient, effective, and creative ways</h2>
+  </div>
 
-<div>
-  <h1>Karey Stivers</h1>
-  <h2>I am a designer and front-end developer with a passion for solving real-world problems in efficient, effective, and creative ways</h2>
-</div>
+  <div id="highlight-reel">
+    <button id="highlight-reel-btn" class="link-btn" ><a href="">View More</a></button>
+  </div>
 
-<div id="highlight-reel">
-  <button id="highlight-reel-btn" class="link-btn" ><a href="">View More</a></button>
-</div>
+  <div>
+    <ul>
+      <li><a href="web-design-and-dev/index.html">Web Design + Dev</a></li>
+      <li><a href="branding/index.html">Branding</a></li>
+      <li><a href="photography/index.html">Photography</a></li>
+    </ul>
+  </div>
 
-<div>
-  <ul>
-    <li><a href="web-design-and-dev/index.php">Web Design + Dev</a></li>
-    <li><a href="branding/index.php">Branding</a></li>
-    <li><a href="photography/index.php">Photography</a></li>
-  </ul>
-</div>
-<footer>
-  <ul id="footer-contact">
-    <li>Karey Stivers</li>
-    <li>karey@kareystivers.dev</li>
-    <li><a href="tel:+2086996597">208-699-6597</a></li>
-    <li><a href="resume/index.php">Resume</a></li>
-  </ul>
-  <p>© Karey Stivers 2022</p> 
-</footer>
+  <footer>
+    <ul class="footer-contact">
+      <li>Karey Stivers</li>
+      <li>karey@kareystivers.dev</li>
+      <li><a href="tel:+2086996597">208-699-6597</a></li>
+      <li><a href="resume/index.html">Resume</a></li>
+    </ul>
+    <p>© Karey Stivers 2022</p> 
+  </footer>
+  
 </body>
 </html>
