--- a/web-design-and-dev/index.html
+++ b/web-design-and-dev/index.html
@@ -2,66 +2,76 @@
 <html>
 <head>
 <title>Web Design + Dev</title>
-<meta name="web-design-and-dev" content="Web Design and Development">
-<meta name="keywords" content="web design portfolio site">
+<meta charset="UTF-8">
+<html lang="en-US">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Karey Stivers"><meta name="keywords" content="web,design,portfolio,site">
+<link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="../css/styles.css">
+<script src="../js/scripts.js" defer></script>
 </head>
 <body>
 <img src="" alt="mobile menu" id="menu-mobile">
   <img src="" alt="close" id="menu-mobile-close">
 
   <nav>
-    <a href="web-design-and-dev/index.php"></a>
-    <a href="branding/index.php"></a>
-    <a href="photography/index.php"></a>
-    <a href="about/index.php"></a>
-    <a href="resume/index.php"></a>
+    <a href="./" disabled>Web Design + Dev</a>
+    <a href="../branding/index.html">Branding</a>
+    <a href="../photography/index.html">Photography</a>
+    <a href="../about/index.html">About</a>
+    <a href="../resume/index.html">Resume</a>
   </nav>
 
+  <div class="page-title">
+    <h1>Web Design + Dev</h1>
+    <h2>Each of these original projects demonstrates my experience in branding and product design, from conception to marketing.    </h2>
+  </div>
+
   <div class="container">
-    <div class="webdev-card">
+    <div class="webdev-card card">
       <!-- dotcomtea -->
       <h2>dotcomtea</h2>
       <button class="link-btn"><a href="">View Site</a></button>
     </div>
     <!-- Frosted Rose Tea -->
-    <div class="webdev-card">
+    <div class="webdev-card card">
       <h2>Frosted Rose Tea</h2>
         <button class="link-btn"><a href="">View Site</a></button>
       </div>
     <!-- Ski Resort -->
-    <div class="webdev-card">
+    <div class="webdev-card card">
       <h2>Ski Resort</h2>
         <button class="link-btn"><a href="">View Site</a></button>
     </div>
 
     <!-- Pen + Gear -->
-    <div class="webdev-card">
+    <div class="webdev-card card">
       <h2>Pen + Gear</h2>
         <button class="link-btn"><a href="">View Site</a></button>
     </div>
 
     <!-- Viper Cosmetics -->
-    <div class="webdev-card">
+    <div class="webdev-card card">
       <h2>Viper Cosmetics</h2>
         <button class="link-btn"><a href="">View Site</a></button>
     </div>
 
     <!-- Editorial -->
-    <div class="webdev-card">
+    <div class="webdev-card card">
       <h2>Editorial</h2>
         <button class="link-btn"><a href="">View Site</a></button>
     </div>
 
   </div> <!-- container close -->
 
-  <a href="#">Back to top</a>
+  <a href="#" class="back-to-top">Back to top</a>
 
   <footer>
-  <ul id="footer-contact">
+  <ul class="footer-contact">
     <li>Karey Stivers</li>
     <li>karey@kareystivers.dev</li>
     <li><a href="tel:+2086996597">208-699-6597</a></li>
-    <li><a href="resume/index.php">Resume</a></li>
+    <li><a href="resume/index.html">Resume</a></li>
   </ul>
   <p>© Karey Stivers 2022</p> 
 </footer>
