--- a/photography/index.html
+++ b/photography/index.html
@@ -29,14 +29,14 @@
 
   <!-- desktop design -->
     <div class="category-nav">
-      <button><a href="" class="link-btn">Portraits</a></button>
-      <button><a href="" class="link-btn">Wedding</a></button>
-      <button><a href="" class="link-btn">Food</a></button>
-      <button><a href="" class="link-btn">Nature</a></button>
-      <button><a href="" class="link-btn">Videography</a></button>
+      <button><a href="portraits.html" class="link-btn">Portraits</a></button>
+      <button><a href="wedding.html" class="link-btn">Wedding</a></button>
+      <button><a href="food.html" class="link-btn">Food</a></button>
+      <button><a href="nature.html" class="link-btn">Nature</a></button>
+      <button><a href="videography.html" class="link-btn">Videography</a></button>
     </div>
 
-    <div id="photoraphy-container">
+    <div id="photography-container">
       <img src="" alt="pic1">
       <img src="" alt="pic2">
       <img src="" alt="pic3">
